# sensor

./: Cargo.toml  README.md  backend.dockerfile  plot.py
.github/workflows/: docker.yml
sensor-backend/: Cargo.toml
sensor-backend/src/: coords.rs  listener.rs  main.rs  rssi.rs  sensors.rs
sensor-backend/src/api/: mod.rs
sensor-backend/src/api/sensors/: mod.rs
sensor-backend/src/api/trilaterations/: mod.rs
sensor-lib/: Cargo.toml
sensor-lib/src/: lib.rs
sensor-node/: Cargo.toml  cfg.toml
sensor-node-config-cli/: Cargo.toml
sensor-node-config-cli/src/: main.rs
sensor-node/.cargo/: config.toml
sensor-node/src/: main.rs
sensor-node/src/driver/: mod.rs  uart.rs  usb.rs  wifi.rs
sensor-node/src/sniffer/: wifi.rs
sensor-test/: Cargo.toml
sensor-test/src/: main.rs
