[package]
name = "sensor-backend"
version.workspace = true
edition.workspace = true

[dependencies]
sensor-lib = { path = "../sensor-lib" }

anyhow = "1.0"
axum = "0.8"
postcard = "1.1"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
