[package]
name = "sensor-backend"
version.workspace = true
edition.workspace = true

[dependencies]
sensor-lib = { path = "../sensor-lib" }

anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
postcard = "1.1"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
