[package]
name = "sensor-node-config-cli"
version.workspace = true
edition.workspace = true

[dependencies]
sensor-lib = { path = "../sensor-lib" }

clap = { version = "4.5", features = ["derive"] }
heapless = { version = "0.9", features = ["alloc", "serde"] }
postcard = { version = "1.1", features = ["alloc"] }
serialport = { version = "4.8", default-features = false }
