[package]
name = "sensor-node"
version = "0.1.0"
edition = "2024"

# required to circumvent rust-analyzer error (https://github.com/rust-lang/rust/issues/125714)
[[bin]]
name = "sensor-node"
harness = false

[features]
esp32c6 = ["esp-backtrace/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-hal/esp32c6", "esp-println/esp32c6", "esp-radio/esp32c6", "esp-rtos/esp32c6"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-radio/esp32s3", "esp-rtos/esp32s3"]

[dependencies]
sensor-lib = { path = "../sensor-lib" }

anyhow = { version = "1.0", default-features = false }
critical-section = "1.2"
defmt = { version = "1.0" }
embassy-executor = { version = "0.9", features = ["defmt", "nightly"] }
embassy-futures = { version = "0.1" }
embassy-net = { version = "0.7", features = ["medium-ethernet", "udp", "dhcpv4"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embassy-usb = "0.5"
esp-alloc = "0.9"
esp-backtrace = { version = "0.18", default-features = false, features = ["defmt", "panic-handler"]}
esp-bootloader-esp-idf = { version = "0.3" }
esp-hal = { version = "1.0.0-rc.1", default-features = false, features = ["defmt", "unstable"] }
esp-println = { version = "0.16", features = ["defmt-espflash", "log-04"] }
esp-radio = { version = "0.16", features = ["wifi", "sniffer", "unstable"] }
esp-rtos = { version = "0.1", features = ["embassy", "esp-radio"] }
heapless = { version = "0.9", features = ["serde"] }
ieee80211 = { version = "0.5", default-features = false, features = ["defmt"] }
log = { version = "0.4" }
postcard = { version = "1.1", default-features = false, features = ["heapless"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
static_cell = { version = "2.1", features = ["nightly"] }

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
